src/test/ui/generator/generator-with-nll.stderr
error[E0626]: borrow may still be in use when generator yields
  --> $DIR/generator-with-nll.rs:8:17
   |
LL |         let b = &mut true;
   |                 ^^^^^^^^^
LL |         //~^ borrow may still be in use when generator yields
LL |         yield ();
   |         -------- possible yield occurs here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0626`.
